--- a/src/app/containers/student-diary/student-diary.component.html
+++ b/src/app/containers/student-diary/student-diary.component.html
@@ -19,39 +19,53 @@
     <mat-icon color="primary">navigate_next</mat-icon>
   </button>
 
-  <button class="current-week" (click)="selectCurrentWeek()" mat-stroked-button>
+  <button
+    class="current-week"
+    mat-stroked-button
+    (click)="selectCurrentWeek()"
+    [disabled]="(dateValue | date:'d') === (getStartOfWeek() | date:'d')"
+  >
     Поточний тиждень
   </button>
 </div>
 
 
-<div class="diary" *ngIf="showDiary">
-    <div *ngFor="let day of weekDays; index as i;" class="day-in-diary day-{{i + 1}}">
-      <mat-card>
-        <mat-card-title>{{day | date:'EEEE, d' | titlecase}}</mat-card-title>
+<div *ngIf="showDiary" class="diary">
+  <div *ngFor="let day of weekDays; index as i;" class="day-in-diary day-{{i + 1}}">
+    <mat-card *ngIf="availableDays.includes(dayNumbers[i])">
+      <mat-card-title>{{day | date:'EEEE, d' | titlecase}}</mat-card-title>
 
-        <table>
-          <tr>
-            <th>№</th>
-            <th>Урок</th>
-            <th>Домашнє завдання</th>
-            <th>Оцінка</th>
-            <th>Примітка</th>
+      <table>
+        <tr>
+          <th>№</th>
+          <th>Урок</th>
+          <th>Домашнє завдання</th>
+          <th>Оцінка</th>
+          <th>Примітка</th>
+        </tr>
+
+        <ng-container *ngFor="let data of diary.data">
+          <tr *ngIf="data.date[2] === dayNumbers[i]">
+            <td>{{data.lessonNumber}}</td>
+            <td>{{data.subjectName}}</td>
+            <td>
+              {{data.homeWork}}
+              <mat-icon
+                *ngIf="data.homeworkFileId !== null"
+                (click)="downloadFile(data.lessonId)"
+                title="Завантажити"
+              >
+                save_alt
+              </mat-icon>
+            </td>
+            <td>{{data.mark > 0 ? data.mark : null}}</td>
+            <td>{{data.note}}</td>
           </tr>
+        </ng-container>
+      </table>
 
-          <ng-container *ngFor="let data of diary.data">
-            <tr *ngIf="data.date[2] === dayNumbers[i]">
-              <td>{{data.lessonNumber}}</td>
-              <td>{{data.subjectName}}</td>
-              <td>{{data.homeWork}}</td>
-              <td>{{data.mark > 0 ? data.mark : null}}</td>
-              <td>{{data.note}}</td>
-            </tr>
-          </ng-container>
-        </table>
-
-      </mat-card>
-    </div>
+    </mat-card>
+  </div>
 </div>
 
 
