--- a/src/app/containers/teachers/teachers.component.html
+++ b/src/app/containers/teachers/teachers.component.html
@@ -16,9 +16,9 @@
 </mat-accordion>
 
 <div class="mat-elevation-z5 table-container" >
-    <table mat-table [dataSource]="teachersList " multiTemplateDataRows class="mat-elevation-z8" matSort>
+    <table mat-table [dataSource]="teachersList" multiTemplateDataRows class="mat-elevation-z8">
         <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{dataHeader(column)}} </th>
+            <th mat-header-cell *matHeaderCellDef> {{dataHeader(column)}} </th>
             <td mat-cell *matCellDef="let teacher"> {{teacher[column]}} </td>
         </ng-container>
 
