--- a/src/app/containers/teachers/teachers.component.scss
+++ b/src/app/containers/teachers/teachers.component.scss
@@ -9,6 +9,12 @@ $base-background: #673ab7;
   @extend %flex-center;
   flex-direction: column;
 }
+mat-icon {
+  vertical-align: middle;
+}
+mat-icon:hover {
+  cursor: pointer;
+}
 
 .header {
   @extend %flex-center;
@@ -41,22 +47,22 @@ $base-background: #673ab7;
   font-size: 14px;
   width: 100%;
 }
-.container{
+.container {
   flex-direction: column-reverse;
   display: flex;
   align-items: center;
   width: 98%;
-  align-self: center; 
+  align-self: center;
 }
-.addTeacherButton{
+.addTeacherButton {
   margin: 0.5rem;
   margin-bottom: 2rem;
 }
-mat-content{
+mat-content {
   align-items: center;
 }
 
-.mat-accordion{
+.mat-accordion {
   align-self: center;
   margin: 0.5rem;
   width: 90%;
@@ -87,7 +93,6 @@ table {
 th.mat-sort-header-sorted {
   color: black;
 }
-
 
 .teacher-detail {
   overflow: hidden;
@@ -147,16 +152,16 @@ tr.teacher-detail-row {
     padding: 1rem !important;
   }
 }
-@media only screen and (min-width: 600px){
-  .container{
+@media only screen and (min-width: 600px) {
+  .container {
     width: 90%;
     flex-direction: row;
     align-content: center;
   }
-  .addTeacherButton{
+  .addTeacherButton {
     margin: 0;
   }
-  .mat-form-field{
+  .mat-form-field {
     margin: 0.5rem;
   }
 }
