--- a/src/app/containers/teachers/teachers.component.html
+++ b/src/app/containers/teachers/teachers.component.html
@@ -18,7 +18,9 @@
 <div class="mat-elevation-z5 table-container" >
     <table mat-table [dataSource]="teachersList" multiTemplateDataRows class="mat-elevation-z8">
         <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-            <th mat-header-cell *matHeaderCellDef> {{dataHeader(column)}} </th>
+            <th mat-header-cell *matHeaderCellDef>{{dataHeader(column)}} 
+                <mat-icon aria-hidden="false" aria-label="asc" (click)="sortAsc">arrow_drop_down</mat-icon>
+            </th>
             <td mat-cell *matCellDef="let teacher"> {{teacher[column]}} </td>
         </ng-container>
 
