--- a/src/app/components/teachers-container/teachers-container.component.html
+++ b/src/app/components/teachers-container/teachers-container.component.html
@@ -1,1 +1,1 @@
-<webui-teachers [teachersPristine]="teachersList$ | async"></webui-teachers>
+<webui-teachers [teachersPristine]="teachersList$ | async" (teachersSorting)="teachersSorting($event)"></webui-teachers>
