--- a/src/app/containers/schedule/schedule.component.html
+++ b/src/app/containers/schedule/schedule.component.html
@@ -2,7 +2,7 @@
 <form (keydown.enter)="$event.preventDefault()">
   <div layout="row" layout-align="start start" class="term-class-year-div">
     <mat-form-field fxFlex>
-      <input type="text" placeholder="Клас *" matInput [formControl]="this.scheduleForm.get('class')"
+      <input type="text" placeholder="Клас *" matInput [formControl]="scheduleForm.get('class')"
         [matAutocomplete]="classA">
       <mat-autocomplete #classA="matAutocomplete" [displayWith]="displayFn">
         <mat-option *ngFor="let class of filteredClasses | async" [value]="class">
@@ -11,9 +11,10 @@
       </mat-autocomplete>
     </mat-form-field>
     <mat-form-field fxFlex>
-      <input type="text" placeholder="Навчальний рік *" matInput [formControl]="this.scheduleForm.get('year')"
+      <input type="text" placeholder="Навчальний рік *" matInput [formControl]="scheduleForm.get('year')"
         [matAutocomplete]="yearA">
-      <mat-autocomplete #yearA="matAutocomplete">
+        <!-- (input)="checkYearInput()" -->
+      <mat-autocomplete #yearA="matAutocomplete" (optionSelected)="enableTermInput()">
         <mat-option *ngFor="let year of filteredYears | async" [value]="year + ' - ' + (+year + +1)">
           {{year}} - {{+year + 1}}
         </mat-option>
@@ -21,21 +22,32 @@
     </mat-form-field>
     <div class="term-div" fxFlex>
       <mat-form-field>
-        <input type="text" placeholder="Семестр *" matInput [formControl]="this.scheduleForm.get('term')"
+        <input type="text" placeholder="Семестр *" matInput [formControl]="scheduleForm.get('term')"
           [matAutocomplete]="termA">
-        <mat-autocomplete #termA="matAutocomplete">
+        <mat-autocomplete #termA="matAutocomplete" (optionSelected)="addStartEndDates()">
           <mat-option *ngFor="let term of filteredTerm | async" [value]="term">
             {{term}}
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <div class="date-div" *ngIf="this.scheduleForm.get('term').value">
-        {{ termsDates[this.scheduleForm.get('term').value].start }} <mat-icon [inline]="true">edit</mat-icon> -
-        {{ termsDates[this.scheduleForm.get('term').value].end }} <mat-icon [inline]="true">edit</mat-icon>
+      <div class="date-div" *ngIf="showStartEndDates && scheduleForm.get('term').value">
+        <mat-form-field>
+          <input matInput [matDatepicker]="pickerStart" [formControl]="scheduleForm.get('termStartDate')"
+            [min]="defaultDates.minStart" [max]="scheduleForm.get('termEndDate').value" readonly>
+          <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+          <mat-datepicker #pickerStart disabled="false"></mat-datepicker>
+        </mat-form-field>
+        <span>&mdash;</span>
+        <mat-form-field>
+          <input matInput [matDatepicker]="pickerEnd" [formControl]="scheduleForm.get('termEndDate')"
+            [min]="scheduleForm.get('termStartDate').value" [max]="defaultDates.maxEnd" readonly>
+          <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+          <mat-datepicker #pickerEnd disabled="false" ></mat-datepicker>
+        </mat-form-field>
       </div>
     </div>
   </div>
-   <!-- -->
+  <!-- -->
   <mat-accordion>
     <mat-expansion-panel *ngFor="let day of daysOfWeek; let i=index">
       <mat-expansion-panel-header>
@@ -52,6 +64,7 @@
     </mat-expansion-panel>
   </mat-accordion>
 
-  <button type="submit" (click)="onSubmit()" mat-raised-button [disabled]="!scheduleForm.valid">Зберегти розклад</button>
+  <button type="submit" (click)="onSubmit()" mat-raised-button [disabled]="!scheduleForm.valid">Зберегти
+    розклад</button>
   <button (click)="clearSchedule()" mat-raised-button>Очистити розклад</button>
 </form>
