--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -27,6 +27,10 @@ mat-form-field {
     font-size: 12px;
     color: #aaa;
     margin: 0 10px 10px 10px;
+
+    mat-form-field {
+        width: 6em;
+    }
 }
 
 button[type="submit"] {
