added styles for mobile devices

--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -90,11 +90,11 @@ h3 {
       table {
         width: 100%;
         th {
-          padding: .2rem;
+          padding: .5rem .2rem;
           font-size: .75rem;
         }
         td {
-          padding: .2rem;
+          padding: .5rem .2rem;
           mat-icon {
             margin: -.4rem 0 -.5rem .1rem;
             font-size: 18px;
