added unsubscribe() to component & fixed styles

--- a/src/app/containers/student-diary/student-diary.component.html
+++ b/src/app/containers/student-diary/student-diary.component.html
@@ -1,74 +1,76 @@
-<div class="navigation">
-  <button (click)="selectPreviousWeek()" mat-button>
-    <mat-icon color="primary">navigate_before</mat-icon>
-  </button>
+<div class="container">
+  <div class="navigation">
+    <button (click)="selectPreviousWeek()" mat-button>
+      <mat-icon color="primary">navigate_before</mat-icon>
+    </button>
 
-  <mat-form-field>
-    <input
-      matInput
-      [matDatepicker]="myDatePicker"
-      [matDatepickerFilter]="dateFilter"
-      [(ngModel)]="dateValue"
-      (dateChange)="selectDay()"
+    <mat-form-field>
+      <input
+        matInput
+        [matDatepicker]="myDatePicker"
+        [matDatepickerFilter]="dateFilter"
+        [(ngModel)]="dateValue"
+        (dateChange)="selectDay()"
+      >
+      <mat-datepicker-toggle matSuffix [for]="myDatePicker"></mat-datepicker-toggle>
+      <mat-datepicker #myDatePicker></mat-datepicker>
+    </mat-form-field>
+
+    <button (click)="selectNextWeek()" mat-button>
+      <mat-icon color="primary">navigate_next</mat-icon>
+    </button>
+
+    <button
+      class="current-week"
+      mat-stroked-button
+      (click)="selectCurrentWeek()"
+      [disabled]="(dateValue | date:'d') === (getStartOfWeek() | date:'d')"
     >
-    <mat-datepicker-toggle matSuffix [for]="myDatePicker"></mat-datepicker-toggle>
-    <mat-datepicker #myDatePicker></mat-datepicker>
-  </mat-form-field>
-
-  <button (click)="selectNextWeek()" mat-button>
-    <mat-icon color="primary">navigate_next</mat-icon>
-  </button>
-
-  <button
-    class="current-week"
-    mat-stroked-button
-    (click)="selectCurrentWeek()"
-    [disabled]="(dateValue | date:'d') === (getStartOfWeek() | date:'d')"
-  >
-    Поточний тиждень
-  </button>
-</div>
-
-
-<div *ngIf="showDiary" class="diary">
-  <div *ngFor="let day of weekDays; index as i;" class="day-in-diary day-{{i + 1}}">
-    <mat-card *ngIf="availableDays.includes(dayNumbers[i])">
-      <mat-card-title>{{day | date:'EEEE, d' | titlecase}}</mat-card-title>
-
-      <table>
-        <tr>
-          <th>№</th>
-          <th>Урок</th>
-          <th>Домашнє завдання</th>
-          <th>Оцінка</th>
-          <th>Примітка</th>
-        </tr>
-
-        <ng-container *ngFor="let data of diary$ | async">
-          <tr *ngIf="data.date[2] === dayNumbers[i]">
-            <td>{{data.lessonNumber}}</td>
-            <td>{{data.subjectName}}</td>
-            <td>
-              {{data.homeWork}}
-              <mat-icon
-                *ngIf="data.homeworkFileId !== null"
-                (click)="downloadFile(data.lessonId)"
-                title="Завантажити"
-              >
-                save_alt
-              </mat-icon>
-            </td>
-            <td>{{data.mark > 0 ? data.mark : null}}</td>
-            <td>{{data.note}}</td>
-          </tr>
-        </ng-container>
-      </table>
-
-    </mat-card>
+      Поточний тиждень
+    </button>
   </div>
-</div>
 
 
-<div *ngIf="!showDiary">
-  <h3>На обрану вами дату розкладу немає. Спробуйте обрати іншу дату.</h3>
+  <div *ngIf="showDiary" class="diary">
+    <div *ngFor="let day of weekDays; index as i;" class="day-in-diary day-{{i + 1}}">
+      <mat-card *ngIf="availableDays.includes(dayNumbers[i])">
+        <mat-card-title>{{day | date:'EEEE, d' | titlecase}}</mat-card-title>
+
+        <table>
+          <tr>
+            <th>№</th>
+            <th>Урок</th>
+            <th>Домашнє завдання</th>
+            <th>Оцінка</th>
+            <th>Примітка</th>
+          </tr>
+
+          <ng-container *ngFor="let data of diary$ | async">
+            <tr *ngIf="data.date[2] === dayNumbers[i]">
+              <td>{{data.lessonNumber}}</td>
+              <td>{{data.subjectName}}</td>
+              <td>
+                {{data.homeWork}}
+                <mat-icon
+                  *ngIf="data.homeworkFileId !== null"
+                  (click)="downloadFile(data.lessonId)"
+                  title="Завантажити"
+                >
+                  save_alt
+                </mat-icon>
+              </td>
+              <td>{{data.mark > 0 ? data.mark : null}}</td>
+              <td>{{data.note}}</td>
+            </tr>
+          </ng-container>
+        </table>
+
+      </mat-card>
+    </div>
+  </div>
+
+
+  <div *ngIf="!showDiary">
+    <h3>На обрану вами дату розкладу немає. Спробуйте обрати іншу дату.</h3>
+  </div>
 </div>
