--- a/src/app/pages/student/student.component.html
+++ b/src/app/pages/student/student.component.html
@@ -1,9 +1,11 @@
 <webui-header>
-<button
-  routerLink="diary"
-  mat-raised-button
->
-  Щоденник
-</button>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <button
+      routerLink="diary"
+      mat-raised-button
+    >
+      Щоденник
+    </button>
+    <router-outlet></router-outlet>
+  </div>
 </webui-header>
