--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -1,49 +1,50 @@
-.navigation {
-  text-align: center;
-  margin: 1rem;
-  mat-form-field {
-    width: 8rem;
-  }
-  .current-week {
-    margin-left: .3rem;
-  }
-}
-
-.diary {
-  padding: 1rem 1rem 1.5rem;
-  mat-card {
-    margin-bottom: 1.2rem;
-    padding: 0;
-    mat-card-title {
-      padding: .8rem 0 0 .8rem;
+.container {
+  height: calc(100vh - 132px);
+  .navigation {
+    text-align: center;
+    margin: 1rem;
+    mat-form-field {
+      width: 8rem;
     }
-    table {
-      width: 100%;
-      border-spacing: 1px;
-      th {
-        padding: .5rem;
-        background: #5b33a1;
-        color: #fff;
+    .current-week {
+      margin-left: .3rem;
+    }
+  }
+  .diary {
+    padding: 1rem 1rem 1.5rem;
+    mat-card {
+      margin-bottom: 1.2rem;
+      padding: 0;
+      mat-card-title {
+        padding: .8rem 0 0 .8rem;
       }
-      td {
-        padding: .5rem;
-        background: #e2e2e2;
-        text-align: center;
-        mat-icon {
-          vertical-align: middle;
-          margin: -1.1rem 0 -.5rem .5rem;
-          font-size: 28px;
-          cursor: pointer;
+      table {
+        width: 100%;
+        border-spacing: 1px;
+        th {
+          padding: .5rem;
+          background: #5b33a1;
+          color: #fff;
+        }
+        td {
+          padding: .5rem;
+          background: #e2e2e2;
+          text-align: center;
+          mat-icon {
+            vertical-align: middle;
+            margin: -1.1rem 0 -.5rem .5rem;
+            font-size: 28px;
+            cursor: pointer;
+          }
         }
       }
     }
   }
-}
-
-h3 {
-  margin: 3rem 2rem;
-  text-align: center;
-  color: #5b33a1;
+  h3 {
+    margin: 3rem 2rem;
+    text-align: center;
+    color: #5b33a1;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -75,29 +76,32 @@ h3 {
 }
 
 @media screen and (max-width: 480px) {
-  .current-week {
-    font-size: .8rem;
-  }
-  .diary {
-    padding: .3rem;
-    font-size: .8rem;
-    mat-card {
-      margin-bottom: 1rem;
-      mat-card-title {
-        padding: .5rem 0 0 .5rem;
-        font-size: 1.2rem;
-      }
-      table {
-        width: 100%;
-        th {
-          padding: .5rem .2rem;
-          font-size: .75rem;
+  .container {
+    height: calc(100vh - 124px);
+    .current-week {
+      font-size: .8rem;
+    }
+    .diary {
+      padding: .3rem;
+      font-size: .8rem;
+      mat-card {
+        margin-bottom: 1rem;
+        mat-card-title {
+          padding: .5rem 0 0 .5rem;
+          font-size: 1.2rem;
         }
-        td {
-          padding: .5rem .2rem;
-          mat-icon {
-            margin: -.4rem 0 -.5rem .1rem;
-            font-size: 18px;
+        table {
+          width: 100%;
+          th {
+            padding: .5rem .2rem;
+            font-size: .75rem;
+          }
+          td {
+            padding: .5rem .2rem;
+            mat-icon {
+              margin: -.4rem 0 -.5rem .1rem;
+              font-size: 18px;
+            }
           }
         }
       }
