--- a/src/app/pages/student/student.component.scss
+++ b/src/app/pages/student/student.component.scss
@@ -1,3 +1,12 @@
-button {
-  margin: .5rem;
+.container {
+  height: calc(100vh - 64px);
+  button {
+    margin: .5rem;
+  }
+}
+
+@media screen and (max-width: 599px) {
+  .container {
+    height: calc(100vh - 56px);
+  }
 }
