--- a/src/app/components/transfer-students-table/transfer-students-table.component.html
+++ b/src/app/components/transfer-students-table/transfer-students-table.component.html
@@ -2,7 +2,7 @@
 
 <div class="table-container">
 
-  <table mat-table [dataSource]="students$ | async">
+  <table mat-table [dataSource]="studentsList">
   
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Ім'я </th>
