--- a/src/app/containers/new-year/new-year.component.html
+++ b/src/app/containers/new-year/new-year.component.html
@@ -2,9 +2,14 @@
 <div class="table-container">
   <table mat-table [dataSource]="transferList$ | async" multiTemplateDataRows>
 
-    <ng-container matColumnDef="year">
-      <th mat-header-cell *matHeaderCellDef>Рік</th>
-      <td mat-cell *matCellDef="let element"> {{element.classYear}} </td>
+    <ng-container matColumnDef="button">
+      <th mat-header-cell *matHeaderCellDef>
+        <button mat-raised-button color="accent">Перевести всі</button>
+      </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button mat-raised-button color="primary"
+        (click)='transferClassesFunc([element])'>Перевести</button> 
+      </td>
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Клас </th>
@@ -13,6 +18,12 @@
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> Кількість учнів </th>
       <td mat-cell *matCellDef="let element"> {{element.numOfStudents}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="newClassName">
+      <th mat-header-cell *matHeaderCellDef> Новий клас </th>
+      <td mat-cell *matCellDef="let element">
+        {{generateClassName(element.className)}} </td>
     </ng-container>
 
     <ng-container matColumnDef="select">
@@ -29,11 +40,10 @@
     </ng-container>
 
     <ng-container matColumnDef="expandedDetail">
-      <td mat-cell *matCellDef="let element" [attr.colspan]="4">
+      <td mat-cell *matCellDef="let element" [attr.colspan]="5">
         <div class="element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-          <webui-transfer-students-table [id]='element.id' [className]='element.className'>
-
-          </webui-transfer-students-table>
+          <webui-transfer-students-table [studentsList]='transferStudents[element.className]' 
+          [className]='element.className'></webui-transfer-students-table>
         </div>
       </td>
     </ng-container>
