--- a/src/app/containers/student-diary/student-diary.component.scss
+++ b/src/app/containers/student-diary/student-diary.component.scss
@@ -11,7 +11,7 @@
     }
   }
   .diary {
-    padding: 1rem 1rem 1.5rem;
+    padding: 1rem 1rem .5rem;
     mat-card {
       margin-bottom: 1.2rem;
       padding: 0;
@@ -32,9 +32,14 @@
           text-align: center;
           mat-icon {
             vertical-align: middle;
-            margin: -1.1rem 0 -.5rem .5rem;
+            margin: -.7rem 0 -0.5rem;
+            padding: .7rem;
             font-size: 28px;
+            color: #2e2e2e;
             cursor: pointer;
+            &:hover {
+              color: #5b33a1;
+            }
           }
         }
       }
@@ -99,8 +104,9 @@
           td {
             padding: .5rem .2rem;
             mat-icon {
-              margin: -.4rem 0 -.5rem .1rem;
-              font-size: 18px;
+              margin: -.8rem 0 -0.4rem;
+              padding: 0.7rem;
+              font-size: 24px;
             }
           }
         }
