--- a/src/app/containers/teachers/teacher-create/teacher-create.component.html
+++ b/src/app/containers/teachers/teacher-create/teacher-create.component.html
@@ -15,30 +15,30 @@
     <form [formGroup]="addTeacher" (ngSubmit)="submitAdd($event)">
         <mat-card-content>
             <mat-form-field class="add-input">
-                <input matInput placeholder="Ім'я" formControlName="firstname" #name >
+                <input matInput placeholder="Ім'я" formControlName="firstname" #name required>
                 <mat-error *ngIf="this.addTeacher.get('firstname').invalid">Укр. символи, з великої літери</mat-error>
             </mat-form-field>
 
             <mat-form-field class="add-input">
-                <input matInput placeholder="Прізвище" formControlName="lastname" #surname >
+                <input matInput placeholder="Прізвище" formControlName="lastname" #surname required>
                 <mat-error *ngIf="this.addTeacher.get('lastname').invalid">Укр. символи, з великої літери</mat-error>
             </mat-form-field>
 
             <mat-form-field class="add-input">
-                <input matInput placeholder="По-батькові" formControlName="patronymic" >
+                <input matInput placeholder="По-батькові" formControlName="patronymic" required>
                 <mat-error *ngIf="this.addTeacher.get('patronymic').invalid">Укр. символи, з великої літери</mat-error>
             </mat-form-field>
 
             <mat-form-field class="add-input">
                 <input matInput matInput [matDatepicker]="picker" [max]="maxAge" placeholder="Дата народження"
-                    formControlName="dateOfBirth" >
+                    formControlName="dateOfBirth" required>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker startView="year" [startAt]="maxAge"></mat-datepicker>
                 <mat-error *ngIf="this.addTeacher.get('dateOfBirth').invalid">Введіть дату народження</mat-error>
             </mat-form-field>
 
             <mat-form-field class="add-input">
-                <input matInput placeholder="Логін" formControlName="login" >
+                <input matInput placeholder="Логін" formControlName="login" required>
                 <mat-error *ngIf="this.addTeacher.get('login').invalid">Мінімум 5 лат. символів</mat-error>
             </mat-form-field>
 
