--- a/src/app/containers/subjects/subjects.component.scss
+++ b/src/app/containers/subjects/subjects.component.scss
@@ -1,93 +1,109 @@
+.main-container {
+  width: 100%;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  background-color: #673ab7;
+  width: 90%;
+  color: white;
+  padding: 15px 0;
+  margin: 20px auto 10px auto;
+}
+.header div {
+  padding: 6px;
+}
+h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+//-----------------------
 .filter-container {
-    margin: 0 auto;
-    width: 90%;
+  margin: 10px auto 0 auto;
+  width: 90%;
+}
+
+.filter-container .mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+//----------------------------
+.accordion {
+  margin: 0 auto 15px auto;
+  width: 90%;
+}
+mat-accordion {
+  width: 100%;
+}
+.mat-card-content {
+  display: flex;
+  margin-bottom: 0;
+  flex-direction: row;
+}
+.accordion .mat-form-field {
+  width: 90%;
+}
+.primary-button {
+  margin: 0 12px !important;
+}
+.accordion mat-form-field {
+  margin: 0 15px 0 0;
+}
+//--------------------------
+.table-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 90%;
+  margin: 0 auto 20px auto;
+}
+table {
+  width: 100%;
+}
+table .mat-form-field {
+  width: 100%;
+  margin: 0 15px 0 0;
+}
+table .mat-card {
+  border: none;
+  width: 100%;
+  border-radius: 0;
+  padding: 10px 0 0 0;
+  
+}
+.subject-detail {
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+td.mat-cell:first-of-type {
+  width: 42%;
+}
+
+
+tr.subject-detail-row {
+  height: 0;
+}
+tr.subject-row:not(.subject-expanded-row):hover {
+  background: #F1F3F4;
+  cursor: pointer;
+}
+
+.subject-row td {
+  border-bottom-width: 0;
+}
+
+@media (max-width: 798px) {
+  .mat-card-content {
+    flex-direction: column;
   }
-  .mat-form-field {
-      font-size: 14px;
-      width: 100%;
+  td.mat-cell {
+    padding: 10px 5px 0 5px;
   }
-  
-  
-  .accordion {
-      display: flex;
-      margin: 0 auto 15px auto;
-      min-width: 200px;
-      max-width: 90%;
-    }
-    .mat-accordion {
-      width: 100%;
-    }
-    .mat-card-content {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 0;
-    }
-    .mat-form-field {
-      margin: 0 10px;
-    }
-    .primary-button {
-      margin: 0 12px !important;
-    }
-    
-    .table-container {
-      display: flex;
-      flex-direction: column;
-      min-width: 200px;
-      max-width: 90%;
-      margin: 0 auto 20px auto;
-      }
-      
-      .header {
-        display: flex;
-        justify-content: center;
-        background-color: #673ab7;
-        width: 90%;
-        color: white;
-        padding: 0.6rem 0;
-        margin: 15px auto;
-        
-      }
-      .header div {
-        padding: 6px;
-      }
-      h3 {
-        font-size: 1.5rem;
-        font-weight: 500;
-        
-      }
-  
-      .mat-table {
-        overflow: auto;
-      }
-      
-      .subject-row {
-        position: relative;
-      }
-      
-      .subject-row:not(.expanded) {
-        cursor: pointer;
-      }
-      
-      .subject-row:not(.expanded):hover {
-        background: #f5f5f5;
-      }
-      
-      .subject-row.expanded {
-        border-bottom-color: transparent;
-        background: #E0E0E0;
-      }
-    
-      .addSubject {
-        margin: 0 10px 5px 10px;
-      }
-      .detail-row {
-        border-bottom-width: 5px; 
-        border-bottom-style: solid;
-        border-bottom-color: #673AB7;
-        background: #FAFAFA;
-      }
-      .editSubject {
-        margin: 0 15px 0 15px;
-    
-      }
-      
+  .primary-button {
+    margin: 0 0 10px 10px !important;
+  }
+}
+
