added some styles to dialog

--- a/src/app/components/homework-dialog/homework-dialog.component.html
+++ b/src/app/components/homework-dialog/homework-dialog.component.html
@@ -1,1 +1,7 @@
+<header></header>
+
 <p>homework-dialog works!</p>
+
+<button (click)="showData()">Show data</button>
+
+<img [src]="attachmentUrl" alt="">
