--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 
 }
+
+.custom-dialog-container .mat-dialog-container {
+  padding: 0;
+}
