modified homework dialog

--- a/src/app/components/homework-dialog/homework-dialog.component.html
+++ b/src/app/components/homework-dialog/homework-dialog.component.html
@@ -1,7 +1,8 @@
 <header></header>
 
-<p>homework-dialog works!</p>
+<!--<button (click)="showData()">Show data</button>-->
+<mat-dialog-content class="content">
+    <img [src]="attachmentUrl" alt="">
+</mat-dialog-content>
 
-<button (click)="showData()">Show data</button>
-
-<img [src]="attachmentUrl" alt="">
+<footer></footer>
