--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,4 +52,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .custom-dialog-container .mat-dialog-container {
   padding: 0;
+  overflow: hidden;
 }
