--- a/src/app/containers/teachers/teachers.component.html
+++ b/src/app/containers/teachers/teachers.component.html
@@ -1,10 +1,14 @@
 <div class="header mat-elevation-z5">
-    <h3>Список вчителів</h3>
+    <div class="send-teacher-email" (click)="sendTeacherList()" ><mat-icon>cloud_download</mat-icon></div>
+    <div class="header-text">
+        <h3>Список вчителів</h3>
+    </div>
 </div>
 
 <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Пошук" class="search-input">
 </mat-form-field>
+
 
 <mat-accordion>
     <mat-expansion-panel>
@@ -44,6 +48,6 @@
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="teacher-detail-row"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
 
 </div>
