--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -1,6 +1,19 @@
+.header {
+    display: flex;
+    justify-content: center;
+    background-color: #673ab7;
+    width: 90%;
+    color: white;
+    padding: 0.6rem 0;
+    margin: 15px auto;
+    
+  }
+
 h1 {
     text-align: center;
-    margin: 20px;
+    font-size: 1.5em;
+    font-weight: 400;
+    // margin: 20px;
 }
 
 mat-expansion-panel {
