new year almost ready

--- a/src/app/components/current-user/current-user.component.html
+++ b/src/app/components/current-user/current-user.component.html
@@ -1,8 +1,8 @@
 
  <div class="user-info">
-   <img [src]="_currentUser.imageTransform(user?.avatar)" alt="User avatar">
+   <!-- <img [src]="_currentUser.imageTransform(user?.avatar)" alt="User avatar">
 
    <h3>{{user.firstname + ' ' + user.lastname}}</h3>
-   <h4>{{_currentUser.userRole()}}</h4>
+   <h4>{{_currentUser.userRole()}}</h4> -->
 
  </div>
