--- a/src/app/components/main-nav/main-nav.component.scss
+++ b/src/app/components/main-nav/main-nav.component.scss
@@ -57,6 +57,7 @@ mat-nav-list i {
 
 mat-drawer {
   padding: 10px 20px 10px 20px;
+    z-index: 102 !important;
 }
 
 mat-sidenav-content{
@@ -72,3 +73,6 @@ mat-sidenav-content{
   align-items: center;
 }
 
+mat-toolbar {
+  z-index: 101 !important;
+}
