--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,12 +27,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .error {
   @extend %notification;
-  background-color: red;
+  background-color: #b22222;
 }
 
 .success {
   @extend %notification;
-  background-color: limegreen;
+  background-color: #5cac2d;
 }
 
 .failure {
