--- a/src/app/containers/new-year/new-year.component.html
+++ b/src/app/containers/new-year/new-year.component.html
@@ -24,7 +24,8 @@
     <ng-container matColumnDef="newClassName">
       <th mat-header-cell *matHeaderCellDef> Новий клас </th>
       <td mat-cell *matCellDef="let element">
-        {{generateClassName(element.className)}} </td>
+        {{generateClassName(element.className) | isGraduation}}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="select">
