adde posibility to remove 1-st lesson on Saturday

--- a/src/app/containers/schedule/daily-schedule/daily-schedule.component.html
+++ b/src/app/containers/schedule/daily-schedule/daily-schedule.component.html
@@ -70,7 +70,8 @@
         <mat-icon class="remove">delete</mat-icon>
       </button>
       <div class="lesson-field">
-        <button mat-icon-button type="button" (click)="removeLesson(lessonNumber)" *ngIf="(lessonNumber !== 0 && 
+        <button mat-icon-button type="button" (click)="removeLesson(lessonNumber)" 
+              *ngIf="( (saturdayFirstLesson || lessonNumber !== 0) && 
                 lessonNumber !== (dailySchedule.controls.length - 1)) ||
                 lessonNumber === 7 && dailySchedule.value[lessonNumber].firstGroup">
           <mat-icon class="remove">remove</mat-icon>
