--- a/src/app/containers/teachers/teacher-journal/teacher-journal.component.html
+++ b/src/app/containers/teachers/teacher-journal/teacher-journal.component.html
@@ -1,11 +1,18 @@
-<div class="container" *ngFor="let data of bindData">
-  <div class="subject">
-    <span>Предмет: </span>
-    <span>{{data.subjectName}}</span>
-  </div>
-  <div class="class">
-    <span>Клас: </span>
-    <span>{{data.className}}</span>
-  </div>
-  <div class="empty-data" *ngIf="data === undefined"><span>Даний вчитель без роботи</span></div>
-</div>
+
+<table mat-table [dataSource]="teacherBindData" class="mat-elevation-z3">
+  <div class="stripe"></div>
+  <ng-container matColumnDef="subjectName">
+    <th mat-header-cell *matHeaderCellDef> Предмет </th>
+    <td mat-cell *matCellDef="let data"> {{data.subjectName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="className">
+    <th mat-header-cell *matHeaderCellDef> Клас </th>
+    <td mat-cell *matCellDef="let data"> {{data.className}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
