--- a/src/app/containers/teachers/teachers.component.html
+++ b/src/app/containers/teachers/teachers.component.html
@@ -34,8 +34,9 @@
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let teacher" [attr.colspan]="columnsToDisplay.length">
                 <div class="teacher-detail" [@detailExpand]="teacher == expandedElement ? 'expanded' : 'collapsed'">
-                    <webui-teacher-card [teacher]="teacher"></webui-teacher-card>
-                    <webui-teacher-journal [teacherId]="teacher.id" ></webui-teacher-journal>
+                    <webui-teacher-detail-container [teacher]="teacher"></webui-teacher-detail-container>
+                    <!-- <webui-teacher-card [teacher]="teacher"></webui-teacher-card>
+                    <webui-teacher-journal [teacherId]="teacher.id" ></webui-teacher-journal> -->
                 </div>
             </td>
         </ng-container>
