--- a/src/app/containers/schedule/schedule.component.scss
+++ b/src/app/containers/schedule/schedule.component.scss
@@ -30,6 +30,10 @@ mat-form-field {
 
 .term-class-year-div {
     margin-bottom: 10px;
+
+    .input-year {
+        width: 3em;
+    }
 }
 
 .term-div {
@@ -46,6 +50,12 @@ mat-form-field {
     }
 }
 
-button[type="submit"] {
+button {
     margin-top: 10px;
+}
+
+.schedule-time {
+    font-size: 12px;
+    color: #aaa;
+    margin: 10px;
 }
